# TOSCA_DEV

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .vulture_whitelist.py  =1.12.0  AI_REFERENCES_AUDIT.md  CAMERA_SETTINGS_FIX_REPORT.md  CLAUDE.md  CLEANUP_REPORT.md  HISTORY.md  LESSONS_LEARNED.md  PROJECT_STATUS.md  README.md  TODO.md  TOOL_AUDIT_REPORT.md  WORK_LOG.md  cleanup_phase1.sh  cleanup_phase2.sh  config.yaml  motor_calibration_20251101_184914.csv  motor_calibration_20251101_184955.csv  motor_calibration_20251101_192438.csv  pre-compact.txt  protocol_builder_review.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_camera_settings_fix.py  test_event_logging_integration.py  test_minimal_settings.py  test_protocol_execution.py  test_thermal_clearing.py  todos.md
.github/: PULL_REQUEST_TEMPLATE.md
.pre-commit-hooks/: detect-informal-comments.py  detect-secrets.py  show-presubmit-reminder.py  validate-file-paths.py  verify-file-headers.py
actuator_module/: LESSONS_LEARNED.md
actuator_module/examples/: 01_list_ports.py  03_find_index.py  04_absolute_positioning.py
calibration_data/: README.md  motor_calibration_20251027_144112.csv  motor_calibration_20251027_150528.csv  motor_calibration_20251101_184914.csv  motor_calibration_20251101_184955.csv  motor_calibration_20251101_185517.csv  motor_calibration_20251101_185600.csv  motor_calibration_20251101_192438.csv  motor_calibration_20251101_192724.csv  motor_calibration_20251101_192808.csv  plot_calibration.py
camera_module/: README.md
camera_module/examples/: 01_list_cameras.py  03_capture_single_frame.py
claude-wsl-migration-package/: PACKAGE_INDEX.md  START_HERE.txt  mcp.json.windows  mcp.json.wsl  migrate_to_wsl.sh  verify_package.sh
components/: MANUFACTURER_DOCS_INDEX.md
components/actuator_module/: README.md  Xeryon.py  settings_default.txt
config/: config.txt  settings_default.txt
docs/: ARCHITECTURE_DOCUMENTATION_SUMMARY.md  CODE_REVIEW_ACTION_PLAN.md  CODE_REVIEW_COMPREHENSIVE_2025-11-06.md  CODE_REVIEW_FIXES_IMPLEMENTATION_PLAN.md  CODE_REVIEW_FIXES_PROGRESS.md  CODE_REVIEW_REPORT_2025-11-05.md  DEVELOPMENT_ENVIRONMENT_SETUP.md  DEVELOPMENT_STANDARDS.md  DOCUMENTATION_INVENTORY.md  DOCUMENTATION_MAINTENANCE_GUIDE.md  DOCUMENTATION_MAINTENANCE_REPORT.md  FDA_COMPLIANCE_CHECKLIST_2025-11-05.md  GIT_HISTORY_CONSOLIDATION.md  GUI_CLEANUP_2025-11-06.md  HARDWARE_TAB_FUNCTIONAL_GROUPING_PROPOSALS.md  HARDWARE_TAB_REDESIGN_PROGRESS.md  IMPROVEMENTS_2025-11-05.md  INDEX.md  LINE_PROTOCOL_BUILDER_SUMMARY.md  MEMORY_HEALTH_REPORT.md  PRODUCTION_READINESS_TASKS.md  PROJECT_CLEANUP_COMPLETE_2025-11-06.md  QUARTERLY_AUDIT_CHECKLIST.md  REDUNDANCY_ELIMINATION_2025-11-05.md  REFACTORING_LOG.md  REPOSITORY_CLEANUP_2025-11-06.md  TASK_COMPLETION_REPORT.md  TECHNICIAN_SETUP.md  UI_CHANGES_2025-10-29.md  UI_CONSOLIDATION_PLAN_2025-11-05.md  UI_CONSOLIDATION_PROGRESS_2025-11-05.md  UI_HARDWARE_TAB_ANALYSIS_2025-11-06.md  UI_REDESIGN_PLAN.md  UI_TREATMENT_WORKFLOW_CODE_CHANGES.md  UI_TREATMENT_WORKFLOW_IMPROVEMENTS.md  UI_UX_ANALYSIS_REPORT.md  UI_UX_DESIGN_GUIDE.md  UI_UX_IMPLEMENTATION_PROGRESS_2025-11-05.md  UI_UX_IMPLEMENTATION_TASKS.md  UI_UX_MOCKUPS.md  (+1 more)
examples/: example-protocol-build.txt  test_line_protocol_builder.py
presubmit/: FUTURE_WORK.md  ONBOARDING.md  PROJECT_STATUS.md  QUICKSTART_GUIDE.md  README.md  REMINDER.txt  START_HERE.md  WORK_LOG.md  ZEN_CONTEXT_GUIDE.md  zen_context_helper.py
reports/: SESSION_SUMMARY_2025-10-31.md  UNUSED_FUNCTIONS_AUDIT_2025-11-02.md  cleanup_summary_report.md  import_cleanup_baseline.md  import_time_baseline.txt  performance_analysis.md  performance_baseline.md  startup_baseline.txt  test_baseline.txt  test_coverage_analysis.md  test_improvement_roadmap.md  tool_setup_validation.md  unused_functions_audit.txt
review_reports/: 01_EXECUTIVE_SUMMARY.md  02_PHASE1_ARCHITECTURE_CODE_QUALITY.md  03_PHASE2_SECURITY_PERFORMANCE.md  04_ACTION_PLAN_RECOMMENDATIONS.md  CLINICAL_DEPLOYMENT_ROADMAP.md  NON_SECURITY_TODO_LIST.md  README.md  RESEARCH_MODE_ROADMAP.md
scripts/: audit_ai_references.py  cleanup_unused_files.bat  cleanup_unused_files_CORRECTED.bat  doc_fix_code_blocks.py  doc_fix_dates.py  doc_maintenance.py  doc_maintenance_full.sh  measure_startup.py  measure_startup_simple.py
src/: __init__.py  main.py
tests/: CAMERA_TESTS_README.md  TEST_SUITE_SUMMARY.md  __init__.py  test_camera_performance.py  test_camera_widget_performance.py  test_connection_parser.py  test_emoji_detection.py  test_event_logging_integration.py  test_mock_actuator.py  test_mock_camera.py  test_mock_gpio.py  test_mock_hardware_base.py  test_mock_laser.py  test_new_features.py  test_protocol_execution.py  test_realtime_safety_monitoring.py  test_signal_introspection.py  test_thread_safety.py  verify_structure.py
(+465 files in other folders)
