[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tosca-laser-control"
version = "0.1.0-alpha"
description = "TOSCA Laser Control System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Aleyegn"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | actuator_module/Xeryon\.py
  | actuator_module/settings_default\.txt
  | docs/actuator-control
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = [
    '^actuator_module/Xeryon\.py$',
    '^docs/actuator-control/.*',
]

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "pyqtgraph.*",
    "serial.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "actuator_module.Xeryon"
ignore_errors = true

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name (we use Qt naming conventions)
    "C0114",  # Missing module docstring
    "R0913",  # Too many arguments
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
